bg component now works correctly on overflows

--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,10 +1,10 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
 .main {
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
